--- a/scraping.ipynb
+++ b/scraping.ipynb
@@ -273,6 +273,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Pour mettre en place des mécanismes de gestion des erreurs dans notre projet de web scraping avec ***BeautifulSoup***, nous pouvons ajouter des vérifications pour gérer les temps de réponse, les pages manquantes et autres erreurs potentielles. Voici comment nous pouvons intégrer ces mécanismes "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -393,6 +400,13 @@
    "metadata": {},
    "source": [
     "### *<p style=\"font-style:italic;\">- Stockage des donnees en CSV</p>*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Pour stocker les données extraites dans un fichier CSV, nous pouvons utiliser le module ***csv*** de Python. Voici comment nous pouvons ecrire le code pour enregistrer les informations des produits dans un fichier CSV "
    ]
   },
   {
@@ -614,6 +628,13 @@
    "metadata": {},
    "source": [
     "### *<p style=\"font-style:italic;\">- Analyse et visualisation des donnees</p>*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Voici comment nous pouvons procéder pour la préparation, l'analyse et la visualisation des données extraites. Nous allons utiliser les bibliothèques ***Pandas***, ***Matplotlib*** et ***Seaborn*** pour ces étapes."
    ]
   },
   {
