--- a/jumia.ipynb
+++ b/jumia.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[notice] A new release of pip is available: 23.2.1 -> 24.1.2\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 24.2\n",
       "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1306,21 +1306,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ***Analyser les données en calculant des statistiques descriptives, comme le prix moyen, le prix minimum et le prix maximum.***\n",
+    "- ***Analyser les données en calculant des statistiques descriptives, comme le prix moyen, le prix médian, la variance, l'Écart type, le prix minimum et le prix maximum.***\n",
     "- ***Identifier les produits les plus chers et les moins chers.***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### Calcul des statistiques descriptives ###\n",
+      "--- Calcul des statistiques descriptives ---\n",
       "Prix moyen : 80862.65322580645 FCFA\n",
+      "Prix médian : 59900.0 FCFA\n",
+      "Variance des prix : 7917712842.5047865\n",
+      "Écart type des prix : 88981.53090672685\n",
       "Prix minimum : 2012.0 FCFA\n",
       "Prix maximum : 450000.0 FCFA\n",
       "\n",
@@ -1341,10 +1344,17 @@
    "source": [
     "# Calculer des statistiques descriptives\n",
     "prix_mean = data['Prix'].mean()\n",
+    "prix_median = data['Prix'].median()\n",
+    "prix_variance = data['Prix'].var()\n",
+    "prix_std_dev = data['Prix'].std()\n",
     "prix_min = data['Prix'].min()\n",
     "prix_max = data['Prix'].max()\n",
-    "print(\"### Calcul des statistiques descriptives ###\")\n",
+    "\n",
+    "print(\"--- Calcul des statistiques descriptives ---\")\n",
     "print(f\"Prix moyen : {prix_mean} FCFA\")\n",
+    "print(f\"Prix médian : {prix_median} FCFA\")\n",
+    "print(f\"Variance des prix : {prix_variance}\")\n",
+    "print(f\"Écart type des prix : {prix_std_dev}\")\n",
     "print(f\"Prix minimum : {prix_min} FCFA\")\n",
     "print(f\"Prix maximum : {prix_max} FCFA\")\n",
     "\n",
@@ -1355,7 +1365,7 @@
     "print(\"\\nProduit le plus cher :\")\n",
     "print(produit_cher)\n",
     "print(\"\\nProduit le moins cher :\")\n",
-    "print(produit_pas_cher)\n"
+    "print(produit_pas_cher)"
    ]
   },
   {
@@ -1374,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1401,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_2668\\692101075.py:34: FutureWarning: \n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_10120\\2208472449.py:16: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1422,24 +1432,6 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
-    "# Charger les données depuis le fichier CSV\n",
-    "data = pd.read_csv('produits_jumia.csv')\n",
-    "\n",
-    "# Nettoyer les données\n",
-    "data.replace('N/A', pd.NA, inplace=True)\n",
-    "data.dropna(inplace=True)\n",
-    "\n",
-    "def clean_price(price):\n",
-    "    price = price.replace('FCFA', '').replace(',', '').replace(' ', '')\n",
-    "    if '-' in price:\n",
-    "        low, high = map(float, price.split('-'))\n",
-    "        price = (low + high) / 2\n",
-    "    else:\n",
-    "        price = float(price)\n",
-    "    return price\n",
-    "\n",
-    "data['Prix'] = data['Prix'].apply(clean_price)\n",
     "\n",
     "# Histogramme des prix des produits\n",
     "plt.figure(figsize=(10, 6))\n",
