--- a/jumia.ipynb
+++ b/jumia.ipynb
@@ -115,7 +115,7 @@
    "metadata": {},
    "source": [
     "### *<p style=\"font-style:italic; text-decoration:underline;\">Sources de Données</p>*\n",
-    "<p style=\"font-style:italic;\">Les sites web à partir desquels nous avons extrait des données est :</p>\n",
+    "<p style=\"font-style:italic;\">Le site web à partir duquel nous avons extrait des données est :</p>\n",
     "\n",
     "***- Site Web Électronique : https://www.jumia.sn/electronique/***\n",
     "<p style=\"font-style:italic;\">Cette page contient des informations détaillées sur les produits.</p>\n",
@@ -175,7 +175,7 @@
    "source": [
     "### ***<p style=\"font-style:italic; text-decoration:underline;\">Bibliothèques utilisées</p>***\n",
     "\n",
-    "***Pour réaliser le scraping sur 6point9, nous utilisons une combinaison de bibliothèques Python robustes :***\n",
+    "***Pour réaliser le scraping sur Jumia, nous utilisons une combinaison de bibliothèques Python robustes :***\n",
     "\n",
     "- **Requests :** ***Pour envoyer des requêtes HTTP et récupérer le contenu des pages web.***\n",
     "- **BeautifulSoup :** ***Pour parser le HTML et extraire les informations nécessaires.***\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,39 +323,6 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***- Maintenant consultons le fichier 'robots.txt' du site pour voir les conditions d'utilisation et les règles de scraping spécifiées par ce site*** "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Impossible d'accéder au fichier robots.txt, statut de réponse: 403\n"
-     ]
-    }
-   ],
-   "source": [
-    "import requests\n",
-    "\n",
-    "url = \"https://www.jumia.sn/electronique/robots.txt\"\n",
-    "response = requests.get(url)\n",
-    "\n",
-    "if response.status_code == 200:\n",
-    "    print(\"Voici le contenu du fichier robots.txt:\")\n",
-    "    print(response.text)\n",
-    "else:\n",
-    "    print(\"Impossible d'accéder au fichier robots.txt, statut de réponse:\", response.status_code)\n"
    ]
   },
   {
@@ -388,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1368,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_10120\\2208472449.py:16: FutureWarning: \n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_10152\\2208472449.py:16: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
